--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -3,13 +3,17 @@
     <div class="d-flex justify-content-center">
         <div style="width:500px">
             <h1 class="text-center">Create</h1>
-            <form action="/camps" method="post">
+            <form action="/camps" method="post" class="needs-validation" novalidate>
                 <!-- <label for="title">Title : </label>
                 <input type="text" id="title" name="campground[title]"> -->
 
-                <div class="mb-3">
+                <div class="mb-3" >
                     <label for="title" class="form-label">Title :</label>
-                    <input type="text" id="title" name="campground[title]" class="form-control" >
+                    <!-- <input type="text" id="title" name="campground[title]" class="form-control" required > -->
+                    <input type="text" id="title" name="campground[title]" class="form-control"  required>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
                 </div>
 
                 <!-- value entered in the input field will be part of an object named campground with a property called title. -->
@@ -19,7 +23,7 @@
 
                 <div class="mb-3">
                     <label for="location" class="form-label">location :</label>
-                    <input type="text" id="location" name="campground[location]"  class="form-control" >
+                    <input type="text" id="location" name="campground[location]"  class="form-control" required>
                 </div>
 
                 <div class="row g-3 align-items-center">
@@ -27,7 +31,7 @@
                       <label for="price" class="col-form-label">Price :</label>
                     </div>
                     <div class="col-auto">
-                      <input type="number" id="price" class="form-control" aria-describedby="passwordHelpInline">
+                      <input type="number" id="price" class="form-control" aria-describedby="passwordHelpInline" required>
                     </div>
                     <div class="col-auto">
                       <span id="passwordHelpInline" class="form-text">
@@ -38,12 +42,12 @@
                 
                 <div class="mb-3">
                     <label for="imgsrc" class="form-label">imgsrc :</label>
-                    <input type="text" id="imgsrc" name="campground[imageSrc]"  class="form-control" >
+                    <input type="text" id="imgsrc" name="campground[imageSrc]"  class="form-control" required>
                 </div>
 
                 <div class="mb-3">
                     <label for="desc" class="form-label">Description :</label>
-                    <textarea class="form-control" id="desc" rows="3" name="campground[description]" ></textarea>
+                    <textarea class="form-control" id="desc" rows="3" name="campground[description]" required></textarea>
                 </div>
                 
                 <button class="btn btn-success">add camp</button>
