added review model

--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -31,7 +31,7 @@
                       <label for="price" class="col-form-label">Price :</label>
                     </div>
                     <div class="col-auto">
-                      <input type="number" id="price" class="form-control" aria-describedby="passwordHelpInline" required>
+                      <input type="text" id="price" class="form-control" aria-describedby="passwordHelpInline" name="campground[price]" required>
                     </div>
                     <div class="col-auto">
                       <span id="passwordHelpInline" class="form-text">
