--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -17,13 +17,13 @@
     <div class="d-flex justify-content-center">
         <div style="width:500px">
             <h1 class="text-center">Edit</h1>
-            <form action="/camps/<%=_id   %>?_method=PUT" method="post">
+            <form action="/camps/<%=_id   %>?_method=PUT" method="post" class="needs-validation" novalidate>
                 <!-- <label for="title">Title : </label>
                 <input type="text" id="title" name="campground[title]"> -->
 
                 <div class="mb-3">
                     <label for="title" class="form-label">Title :</label>
-                    <input type="text" id="title" name="campground[title]" value="<%= title  %>" class="form-control" >
+                    <input type="text" id="title" name="campground[title]" value="<%= title  %>" class="form-control" required>
                 </div>
 
                 <!-- value entered in the input field will be part of an object named campground with a property called title. -->
@@ -33,7 +33,7 @@
 
                 <div class="mb-3">
                     <label for="location" class="form-label">location :</label>
-                    <input type="text" id="location" name="campground[location]" value="<%= location  %>"  class="form-control" >
+                    <input type="text" id="location" name="campground[location]" value="<%= location  %> "  class="form-control" required>
                 </div>
 
                 <div class="row g-3 align-items-center">
@@ -41,7 +41,7 @@
                       <label for="price" class="col-form-label">Price :</label>
                     </div>
                     <div class="col-auto">
-                      <input type="number" id="price" value="<%= price  %>" class="form-control" aria-describedby="passwordHelpInline">
+                      <input type="text" id="price" value="<%= price  %>" class="form-control" aria-describedby="passwordHelpInline" name="campground[price]" required>
                     </div>
                     <div class="col-auto">
                       <span id="passwordHelpInline" class="form-text">
@@ -52,12 +52,12 @@
                 
                 <div class="mb-3">
                     <label for="imgsrc" class="form-label">imgsrc :</label>
-                    <input type="text" id="imgsrc" name="campground[imageSrc]" value="<%= imageSrc  %>"  class="form-control" >
+                    <input type="text" id="imgsrc" name="campground[imageSrc]" value="<%= imageSrc  %>"  class="form-control" required>
                 </div>
 
                 <div class="mb-3">
                     <label for="desc" class="form-label">Description :</label>
-                    <textarea class="form-control" id="desc" rows="3" name="campground[description]">
+                    <textarea class="form-control" id="desc" rows="3" name="campground[description]" required>
                         <%= description  %>
                     </textarea>
                 </div>
